# thonny-monokai

./: LICENSE  README.md  __init__.py  pyproject.toml
thonnycontrib/monokai/: __init__.py
